# football-ai

./: .gitignore  README.md  hello.py  pyproject.toml  setup.sh  test.ipynb
app/: file.py  main.py
app/api/v1/endpoints/: analyze.py
app/configs/: annotators.py  config.py  model_paths.py  pitch.py
app/processing/: classification.py  detection.py  tracking.py  video_pipeline.py
app/stream/: state.py
app/utils/: enums.py  utils.py
frontend/: index.html  script.js
